# Navigation_using_VSLAM_on_Ridgeback_Robot

./: .gitignore  README.md  frames.gv  setup_config.sh  ubuntu20.04PC  ubuntu20.04PC.pub
.catkin_tools/profiles/default/: config.yaml  devel_collisions.txt
src/ORB_SLAM3/: CMakeLists.txt
src/ORB_SLAM3/config/D455/: D455.yaml
src/orb_slam3_ros/: CMakeLists.txt  Vocabulary  package.xml
src/orb_slam3_ros/config/D455/: D455.yaml
src/orb_slam3_ros/launch/: d455_rgbd.launch  debug_pointcloud.launch  dynamic_slam_d455.launch  dynamic_slam_navigation.launch  dynamic_slam_ridgeback.launch  dynamic_slam_with_pointcloud.launch  orb_slam3_d455.launch  orb_slam3_fixed.launch  ridgeback_navigation.launch  semantic_mapping.launch  semantic_mapping_from_bag.launch  test_pointcloud.launch  test_slam.launch
src/orb_slam3_ros/maps/: my_map.pgm  my_map.yaml  my_map_large.pgm  my_map_large.yaml  my_map_scaled.pgm  my_map_scaled.yaml
src/orb_slam3_ros/rviz/: pointcloud_test.rviz  ridgeback_slam.rviz  semantic_mapping.rviz  slam_pointcloud.rviz
src/orb_slam3_ros/scripts/: install_dependencies.sh  object_tracker.py  pointcloud_to_map.py  setup_paths.sh  test_orb_slam3.sh  test_pointcloud_publisher.py  verify_library.sh  voice_recognition.py
src/orb_slam3_ros/src/: orb_slam3_ros_rgbd.cc  orb_slam3_ros_yolo_rgbd.cc  pointcloud_to_map.cpp  slam_pointcloud_publisher.cpp
src/orb_slam3_ros/vocabulary/: ORBvoc.txt
src/ridgeback_semantic_nav/: CMakeLists.txt  package.xml
src/ridgeback_semantic_nav/config/: base_local_planner_params.yaml  costmap_common.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
src/ridgeback_semantic_nav/launch/: absolute_path_navigation.launch  absolute_path_navigation_backup.launch  fixed_navigation.launch  map_generation_from_bag.launch  ridgeback_semantic_navigation.launch  ridgeback_tf.launch  simple_robot.launch  simplified_navigation.launch
src/ridgeback_semantic_nav/rviz/: ridgeback_nav.rviz
src/ridgeback_semantic_nav/scripts/: check_tf_objects.py  debug_navigation.py  enhanced_semantic_navigator.py  expand_map.py  fake_velocity_controller.py  goto_object.py  improved_goto_object.py  navigate_to_object.py
src/ridgeback_semantic_nav/urdf/: simple_robot.urdf
src/semantic_mapping/: CMakeLists.txt  package.xml
src/semantic_mapping/launch/: semantic_mapping.launch
src/semantic_mapping/rviz/: semantic_mapping.rviz
src/semantic_mapping/scripts/: check_db.py  query_client.py  semantic_mapper_node.py  semantic_navigator.py
src/yolov8_ros/: CMakeLists.txt  package.xml
src/yolov8_ros/msg/: Detection2D.msg  Detections2D.msg
src/yolov8_ros/rviz/: dynamic_slam.rviz
src/yolov8_ros/scripts/: gsconv.py  modified_yolov8.py  yolov8_detector_node.py
