<?xml version="1.0"?>
<package format="2">
  <name>semantic_mapping</name>
  <version>0.1.0</version>
  <description>Semantic mapping for object localization and navigation</description>

  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>pcl_ros</depend>
  <depend>nav_msgs</depend>
  
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  
  <!-- Define service dependencies -->
  <build_depend>yolov8_ros</build_depend>
  <exec_depend>yolov8_ros</exec_depend>

</package>